[package]
name = "event-countdown"
version = "1.0.4"
authors = ["Lee Thomas <leet944@gmail.com>"]
description = "Countdown to events you're looking forward to."
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
keywords = ["cli", "utils", "utility", "count", "event"]
categories = ["command-line-utilities"]
homepage = "https://github.com/leethomas/countdown"
documentation = "https://github.com/leethomas/countdown"
repository = "https://github.com/leethomas/countdown"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
dirs = "4.0.0"
rand = "0.8.5"
serde = { version = "1.0.138", features = ["derive"] }
toml = "0.5.9"
chrono = "0.4.19"


[[bin]]
name = "countdown"
path = "main.rs"
